# CG1

./: .gitignore  Robot_krusch.cpp
ex1/: CMakeLists.txt  Context.cpp  Context.hpp  Control.cpp  Control.hpp  GLIncludes.hpp  Node.cpp  Node.hpp  Robot.cpp  Robot.hpp  RotationMode.hpp  SceneGraph.cpp  SceneGraph.hpp
ex1/executable_examples/linux/: cg1_ex1
ex1/executable_examples/macosx/: cg1_ex1_macosx
ex2/: CMakeLists.txt  Cell.cpp  Cell.hpp  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  Projection.cpp  Projection.hpp  Window.cpp  Window.hpp
ex2/data/: soccerball.mtl
ex2/linux/: cg1_ex2
ex2/macosx/: cg1_ex2
